--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,8 +96,8 @@ sesuai contoh </string>
     <string name="status_pencarian_orang">Status Pencarian Orang</string>
 
     <string-array name="choice_gender">
-        <item>Man</item>
-        <item>Woman</item>
+        <item>laki-laki</item>
+        <item>perempuan</item>
     </string-array>
 
     <string-array name="title_guide_fragment">
